--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <table cellspacing="20">
         <tr>
-        <td><img src="images/ad-group-logo.png" alt="AD Group website"></td>
+        <td><img src="Images/ad-group-logo.png" alt="AD Group website"></td>
         <td><h1>Fantokh website<h1/></td>
         </tr>
 
